increased top padding to prevent navbar from covering page content

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 body {
-  padding-top: 65px;
+  padding-top: 150px;
 }
 
 /* header */
